fixed top spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -117,12 +117,16 @@ video {
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
-  height: 100%;
   background: #ffffff;
+  height: 100%;
   border-radius: 5px;
   text-align: center;
   font-family: Avenir Next;
   color: #000000;
+}
+
+.meeting-form-contents {
+  margin-top: 5rem;
 }
 
 /* Welcome to your meeting */
